[*] BO : Fixed integration for stats on IE6

--- a/css/admin.css
+++ b/css/admin.css
@@ -656,7 +656,7 @@ tr.deleted td {
 }
 
 .space {
-	margin-top: 1em;
+	margin-top: 13px;
 }
 
 .pspace {
